# brainease

./: .gitattributes  .gitignore  .prettierrc  404.html  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  changelog.html  cliff.toml  index.html  license.html  print.html  rustfmt.toml  searchindex.js  searchindex.json
.github/: dependabot.yml
.github/workflows/: another-test.yml  ci.yml  cli.yml  docs.yml  lexer.yml  publish.yml  runtime.yml
assets/: bf-memory.js  styles.css
brainease_lexer/: Cargo.toml
brainease_lexer/src/: logger.rs  util.rs
brainease_lexer/src/parser/: file.rs  mod.rs  parse_instruction.rs
brainease_lexer/src/syntax/: goto.rs  if_logic.rs  instruction.rs  mod.rs  pointer.rs  regex.rs  token.rs  token_parser.rs
brainease_runtime/: Cargo.toml
brainease_runtime/src/: executor.rs  io_handler.rs  lib.rs  runtime.rs
brainease_runtime/src/io_handler/: default.rs  mod.rs  proxy.rs
brainease_transpiler/: Cargo.toml
brainease_transpiler/src/: as_string.rs  bf_parser.rs  cleaner.rs  create_instruction.rs  filter.rs  lib.rs  parse_loop.rs  parser.rs
cli/: Cargo.toml
docs/: book.toml
docs/assets/: styles.css
docs/src/: CNAME  README.md  SUMMARY.md  instructions.md  readme.md  syntax.md
docs/src/instructions/: break.md  decrement.md  goto.md  if.md  inc-and-dec.md  increment.md  index.md  loop.md  move-and-swap.md  print-and-write.md  read-and-save.md
docs/src/language/: assignment-operators.md  handling-io.md  loops-and-flow-control.md  pointer-movement.md
docs/src/learning/: ide-support.md  installing.md  memory.md  syntax.md
docs/src/reference/: bf-transpiler.md  brainease-cli.md  lexer.md  programmatically-usage.md  runtime.md  transpiler.md
examples/: golden.brain  hello.brain  hello.bz  squares.brain
examples/webserver/: README.md  index.js  main.brain
instructions/: break.html  goto.html  if.html  inc-and-dec.html  loop.html  move-and-swap.html  print-and-write.html  read-and-save.html
language/: assignment-operators.html  handling-io.html  loops-and-flow-control.html  pointer-movement.html
learning/: ide-support.html  installing.html  memory.html  syntax.html
lexer/: Cargo.toml
lexer/src/: headers.rs  lib.rs  logger.rs  messages.rs  util.rs
lexer/src/parser/: file.rs  mod.rs  models.rs  parse_instruction.rs
lexer/src/syntax/: if_logic.rs  instruction.rs  mod.rs  parser.rs  regex.rs  token.rs
reference/: bf-transpiler.html  brainease-cli.html  lexer.html  programmatically-usage.html  runtime.html  transpiler.html
runtime/: Cargo.toml
runtime/src/: runtime.rs
src/: args.rs  cli.rs  main.rs  reader.rs  run.rs  transpile.rs  util.rs
src/util/: logger.rs  mod.rs  reader.rs
tests/: integration_tests.rs
tests/resources/: goto-directions.brain  hello.brain  hello.bz  if-simple-test.brain  if.bz  loop.bz
