[workspace]
members = ["brainease_lexer", "brainease_runtime"]

[package]
name = "brainease"
version = "1.0.0"
edition = "2021"
description = "A brainf*ck-style programming language, but readable"
documentation = "https://arthurfiorette.github.io/brainease"
homepage = "https://github.com/arthurfiorette/brainease"
repository = "https://github.com/arthurfiorette/brainease"
license = "MIT"
readme = "./README.md"

[dependencies]
brainease_runtime = { path = "brainease_runtime", version = "1.0.0" }
brainease_lexer = { path = "brainease_lexer", version = "1.0.0" }

clap = { version = "^3.0", features = ["derive"] }
env_logger = "^0.9"
log = "^0.4"
