[workspace]
members = ["brainease_lexer", "brainease_runtime", "brainease_transpiler"]

[package]
name = "brainease"
version = "1.0.4"
edition = "2021"
description = "A brainf*ck-style programming language, but readable"
documentation = "https://arthurfiorette.github.io/brainease"
homepage = "https://github.com/arthurfiorette/brainease"
repository = "https://github.com/arthurfiorette/brainease"
license = "MIT"
readme = "./README.md"

[dependencies]
brainease_runtime = { path = "brainease_runtime", version = "^1" }
brainease_lexer = { path = "brainease_lexer", version = "^1" }
brainease_transpiler = { path = "brainease_transpiler", version = "^1" }

clap = { version = "^3.1", features = ["derive"] }

clap-verbosity-flag = "^1"
env_logger = "^0.9"
log = "^0.4"