[package]
name = "brainease_lexer"
version = "1.0.0"
edition = "2021"
description = "A brainf*ck-style programming language, but readable"
categories = [
  "language",
  "rust",
  "programming",
  "language",
  "brain",
  "ease",
  "brainfuck",
]
documentation = "https://arthurfiorette.github.io/brainease"
homepage = "https://github.com/arthurfiorette/brainease"
repository = "https://github.com/arthurfiorette/brainease"
license = "MIT"
readme = "./README.md"


[dependencies]
lazy-regex = "^2"
log = "^0.4"
