[package]
name = "brainease"
version = "1.0.0"
edition = "2021"
description = "A brainf*ck-style programming language, but readable"
categories = [
  "language",
  "rust",
  "programming",
  "language",
  "brain",
  "ease",
  "brainfuck",
]
documentation = "https://arthurfiorette.github.io/brainease/"
repository = "https://github.com/arthurfiorette/brainease"
license = "MIT"
readme = "../README.md"


[dependencies]
brainease-runtime = { path = "../runtime", version = "1.0.0"}
brainease-lexer = { path = "../lexer", version = "1.0.0"}

clap = { version = "^3.0", features = ["derive"] }
env_logger = "^0.9"
log = "^0.4"
